UI Overhaul and name change

--- a/Lead_Tracker/manifest.json
+++ b/Lead_Tracker/manifest.json
@@ -4,6 +4,6 @@
     "description": "Track your leads!",
     "manifest_version": 3,
     "action": {
-        "default_popup": "ChromeEx.html"
+        "default_popup": "LeadTracker.html"
     }
 }
